fixes #542 bot admin: testing a test connector produces a technical error
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/shared/select-bot/select-bot.component.css
+++ b/bot/admin/web/src/app/shared/select-bot/select-bot.component.css
@@ -18,3 +18,14 @@
   width: 200px;
   padding-right: 10px;
 }
+
+.connector-icon {
+  vertical-align: text-top;
+  width: 20px;
+  height: auto;
+  margin-right: 10px;
+}
+
+.connector {
+  text-transform: capitalize;
+}
