fixes #546 nlp admin: in search tab, creating a new in intent refresh the page
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.html
@@ -31,6 +31,7 @@
           <mat-option value="newIntent">Create New Intent</mat-option>
         </mat-select>
       </mat-form-field>
+      <button mat-icon-button (click)="newIntent()" matTooltip="Create New Intent"><mat-icon>library_add</mat-icon></button>
 
       <mat-form-field class="locale">
         <mat-select placeholder="Language" [(ngModel)]="sentence.language"
