--- a/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.html
@@ -44,6 +44,9 @@
       <span *ngIf="displayStatus" class="status" [style.background]="sentence.statusColor()">
         {{sentence.statusDisplayed()}}
       </span>
+      <span *ngIf="displayStatus && sentence.forReview" class="status" style="background:dodgerblue">
+        To review
+      </span>
       <span *ngIf="displayProbabilities" class="probability">
         <span
           *ngIf="displayProbabilities && sentence.classification.intentId && sentence.classification.hasIntentProbability()"
@@ -92,6 +95,12 @@
                           [displayProbabilities]="displayProbabilities"
                           (containerChange)="onSentenceChange()"></tock-edit-entities>
     </div>
+    <mat-card *ngIf="sentence.forReview && sentence.reviewComment">
+      <mat-card-subtitle>To review</mat-card-subtitle>
+      <mat-card-content class="reviewComment">
+        {{sentence.reviewComment}}
+      </mat-card-content>
+    </mat-card>
   </mat-card-content>
   <mat-card-actions class="sentence-analysis-content">
     <button mat-raised-button color="warn" (click)="onDelete()">Delete</button>
@@ -99,11 +108,13 @@
             matTooltip="Set as unknown to use later">Unknown
     </button>
     <button mat-raised-button class="validate" color="primary" (click)="onValidate()">Validate</button>
+    <button mat-raised-button class="validate" color="accent" (click)="onReviewRequest()">Review request</button>
     <button mat-button *ngIf="config.displayDialogUrl"
             color="primary"
             (click)="displayDialogs()"
             matTooltip="Display conversations using this sentence">Conversations
     </button>
-    <span *ngIf="sentence.updateDate" class="lastUpdate" matTooltip="Last update">{{sentence.updateDate | amLocal | amDateFormat: 'HH:mm:ss YYYY/MM/DD'}}</span>
+    <div *ngIf="sentence.qualifier" class="lastUpdate" matTooltip="Qualifier">{{sentence.qualifier}}</div>
+    <div *ngIf="sentence.updateDate" class="lastUpdate" matTooltip="Last update">{{sentence.updateDate | amLocal | amDateFormat: 'HH:mm:ss YYYY/MM/DD'}}</div>
   </mat-card-actions>
 </mat-card>
