resolves #550 nlp admin / test errors: add by intent selection support
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/sentence-analysis/review-request-dialog/review-request-dialog.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/review-request-dialog/review-request-dialog.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<h1 mat-dialog-title>Request review</h1>
+<h1 mat-dialog-title>Request Review</h1>
 <div mat-dialog-content class="container">
   <p>
     <mat-form-field class="description">
