--- a/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.html
@@ -108,7 +108,7 @@
             matTooltip="Set as unknown to use later">Unknown
     </button>
     <button mat-raised-button class="validate" color="primary" (click)="onValidate()">Validate</button>
-    <button mat-raised-button class="validate" (click)="onReviewRequest()">Review request</button>
+    <button mat-raised-button class="validate" (click)="onReviewRequest()">Ask for Review</button>
     <button mat-button *ngIf="config.displayDialogUrl"
             color="primary"
             (click)="displayDialogs()"
