--- a/nlp/admin/web/src/app/test-nlp/test-entity-error.component.css
+++ b/nlp/admin/web/src/app/test-nlp/test-entity-error.component.css
@@ -14,3 +14,17 @@
  * limitations under the License.
  */
 
+.intent {
+  margin-right: 20px;
+}
+
+.search {
+  height:100%;
+  width:80%;
+  margin: 20px auto;
+  text-align:center;
+}
+
+.search-input {
+  font-size: large;
+}
