--- a/nlp/admin/web/src/app/test-nlp/test-entity-error.component.html
+++ b/nlp/admin/web/src/app/test-nlp/test-entity-error.component.html
@@ -13,52 +13,77 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
+<mat-card class="search">
+  <mat-card-content>
+    <mat-form-field class="intent">
+      <mat-select placeholder="Intent" [(ngModel)]="dataSource.intent" (selectionChange)="search()" class="search-input">
+        <mat-option value="">All</mat-option>
+        <mat-optgroup *ngFor="let category of state.currentIntentsCategories | async" [label]="category.category">
+          <mat-option *ngFor="let intent of category.intents" [value]="intent.qualifiedName()">
+            {{intent.intentLabel()}}
+          </mat-option>
+        </mat-optgroup>
+        <mat-option value="unknown">Unknown</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <button mat-button (click)="search()">GO</button>
+  </mat-card-content>
+</mat-card>
 
 <div>
 
   <mat-table #table [dataSource]="dataSource">
 
     <ng-container matColumnDef="text">
-      <mat-header-cell *matHeaderCellDef> Original </mat-header-cell>
-      <mat-cell *matCellDef="let row"> <tock-highlight fontSize="smaller" [sentence]="row.originalSentence" [readOnly]="true" [displayActions]="false"></tock-highlight>
+      <mat-header-cell *matHeaderCellDef> Original</mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <tock-highlight fontSize="smaller" [sentence]="row.originalSentence" [readOnly]="true"
+                        [displayActions]="false"></tock-highlight>
       </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="intent">
-      <mat-header-cell *matHeaderCellDef> Intent </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Intent</mat-header-cell>
       <mat-cell *matCellDef="let row"> {{intentName(row)}}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="error">
-      <mat-header-cell *matHeaderCellDef> Last Error </mat-header-cell>
-      <mat-cell *matCellDef="let row"> <tock-highlight fontSize="smaller" [sentence]="row.sentence" [readOnly]="true" [displayActions]="false"></tock-highlight></mat-cell>
+      <mat-header-cell *matHeaderCellDef> Last Error</mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <tock-highlight fontSize="smaller" [sentence]="row.sentence" [readOnly]="true"
+                        [displayActions]="false"></tock-highlight>
+      </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="count">
-      <mat-header-cell *matHeaderCellDef> Errors </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Errors</mat-header-cell>
       <mat-cell *matCellDef="let row"> {{row.count}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="percent">
-      <mat-header-cell *matHeaderCellDef matTooltip="(after first error)"> Test Errors / Tests  </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{(row.count/row.total)| percent:'1.0-2'}} </mat-cell>
+      <mat-header-cell *matHeaderCellDef matTooltip="(after first error)"> Test Errors / Tests</mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{(row.count / row.total)| percent:'1.0-2'}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="probability">
-      <mat-header-cell *matHeaderCellDef> Average Entity Error Probability </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Average Entity Error Probability</mat-header-cell>
       <mat-cell *matCellDef="let row"> {{row.averageErrorProbability | percent:'1.0-2'}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="firstErrorDate">
-      <mat-header-cell *matHeaderCellDef> Detection Date </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Detection Date</mat-header-cell>
       <mat-cell *matCellDef="let row"> {{row.firstDetectionDate | amCalendar}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="actions">
-      <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Actions</mat-header-cell>
       <mat-cell *matCellDef="let row">
-        <button mat-icon-button (click)="validate(row)"><mat-icon matTooltip="Validate Entities" style="color:green">sentiment_very_satisfied</mat-icon></button>
-        <button mat-icon-button (click)="change(row)"><mat-icon matTooltip="Change the Entities" style="color:red">update</mat-icon></button>
+        <button mat-icon-button (click)="validate(row)">
+          <mat-icon matTooltip="Validate Entities" style="color:green">sentiment_very_satisfied</mat-icon>
+        </button>
+        <button mat-icon-button (click)="change(row)">
+          <mat-icon matTooltip="Change the Entities" style="color:red">update</mat-icon>
+        </button>
       </mat-cell>
     </ng-container>
 
@@ -67,9 +92,9 @@
   </mat-table>
 
   <mat-paginator #paginator
-                [length]="dataSource.size"
-                [pageIndex]="0"
-                [pageSize]="10"
-                [pageSizeOptions]="[5, 10, 25, 100]">
+                 [length]="dataSource.size"
+                 [pageIndex]="0"
+                 [pageSize]="10"
+                 [pageSizeOptions]="[5, 10, 25, 100]">
   </mat-paginator>
 </div>
