--- a/nlp/admin/web/src/app/test-nlp/test-intent-error.component.html
+++ b/nlp/admin/web/src/app/test-nlp/test-intent-error.component.html
@@ -14,50 +14,74 @@
   ~ limitations under the License.
   -->
 
+<mat-card class="search">
+  <mat-card-content>
+    <mat-form-field class="intent">
+      <mat-select placeholder="Intent" [(ngModel)]="dataSource.intent" (selectionChange)="search()"
+                  class="search-input">
+        <mat-option value="">All</mat-option>
+        <mat-optgroup *ngFor="let category of state.currentIntentsCategories | async" [label]="category.category">
+          <mat-option *ngFor="let intent of category.intents" [value]="intent.qualifiedName()">
+            {{intent.intentLabel()}}
+          </mat-option>
+        </mat-optgroup>
+        <mat-option value="unknown">Unknown</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <button mat-button (click)="search()">GO</button>
+  </mat-card-content>
+</mat-card>
+
 <div>
 
   <mat-table #table [dataSource]="dataSource">
 
     <ng-container matColumnDef="text">
-      <mat-header-cell *matHeaderCellDef> Text </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Text</mat-header-cell>
       <mat-cell *matCellDef="let row"> {{row.sentence.text}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="currentIntent">
-      <mat-header-cell *matHeaderCellDef> Current Intent </mat-header-cell>
-      <mat-cell *matCellDef="let row"> <span style="color:green">{{state.intentLabelByName(row.currentIntent)}}</span></mat-cell>
+      <mat-header-cell *matHeaderCellDef> Current Intent</mat-header-cell>
+      <mat-cell *matCellDef="let row"><span style="color:green">{{state.intentLabelByName(row.currentIntent)}}</span>
+      </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="wrongIntent">
-      <mat-header-cell *matHeaderCellDef> Intent Found </mat-header-cell>
-      <mat-cell *matCellDef="let row"> <span style="color:red">{{state.intentLabelByName(row.wrongIntent)}}</span></mat-cell>
+      <mat-header-cell *matHeaderCellDef> Intent Found</mat-header-cell>
+      <mat-cell *matCellDef="let row"><span style="color:red">{{state.intentLabelByName(row.wrongIntent)}}</span>
+      </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="count">
-      <mat-header-cell *matHeaderCellDef> Errors </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Errors</mat-header-cell>
       <mat-cell *matCellDef="let row"> {{row.count}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="percent">
-      <mat-header-cell *matHeaderCellDef matTooltip="(after first error)"> Test Errors / Tests  </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{(row.count/row.total)| percent:'1.0-2'}} </mat-cell>
+      <mat-header-cell *matHeaderCellDef matTooltip="(after first error)"> Test Errors / Tests</mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{(row.count / row.total)| percent:'1.0-2'}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="probability">
-      <mat-header-cell *matHeaderCellDef> Average Intent Error Probability </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Average Intent Error Probability</mat-header-cell>
       <mat-cell *matCellDef="let row"> {{row.averageErrorProbability | percent:'1.0-2'}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="firstErrorDate">
-      <mat-header-cell *matHeaderCellDef> Detection Date </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Detection Date</mat-header-cell>
       <mat-cell *matCellDef="let row"> {{row.firstDetectionDate | amCalendar}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="actions">
-      <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+      <mat-header-cell *matHeaderCellDef> Actions</mat-header-cell>
       <mat-cell *matCellDef="let row">
-        <button mat-icon-button (click)="validate(row)"><mat-icon matTooltip="Validate Intent" style="color:green">sentiment_very_satisfied</mat-icon></button>
-        <button mat-icon-button (click)="change(row)"><mat-icon matTooltip="Change the Intent" style="color:red">update</mat-icon></button>
+        <button mat-icon-button (click)="validate(row)">
+          <mat-icon matTooltip="Validate Intent" style="color:green">sentiment_very_satisfied</mat-icon>
+        </button>
+        <button mat-icon-button (click)="change(row)">
+          <mat-icon matTooltip="Change the Intent" style="color:red">update</mat-icon>
+        </button>
       </mat-cell>
     </ng-container>
 
@@ -66,9 +90,9 @@
   </mat-table>
 
   <mat-paginator #paginator
-                [length]="dataSource.size"
-                [pageIndex]="0"
-                [pageSize]="10"
-                [pageSizeOptions]="[5, 10, 25, 100]">
+                 [length]="dataSource.size"
+                 [pageIndex]="0"
+                 [pageSize]="10"
+                 [pageSizeOptions]="[5, 10, 25, 100]">
   </mat-paginator>
 </div>
