--- a/nlp/admin/web/src/app/entities/entities.component.html
+++ b/nlp/admin/web/src/app/entities/entities.component.html
@@ -56,13 +56,16 @@
   <mat-card-content>
     <mat-card-title>Predefined values for {{ selectedEntityType.name }}</mat-card-title>
     <div>
-      <mat-checkbox [(ngModel)]="selectedDictionary.onlyValues" class="no-model model"
+      <mat-checkbox [(ngModel)]="selectedDictionary.onlyValues" class="no-model model" (change)="updateDictionary()"
                     matTooltip="If selected, no model is used: only exact values are recognized/evaluated">No Model
       </mat-checkbox>
-      <mat-form-field *ngIf="!selectedDictionary.onlyValues" class="model">
+      <mat-form-field *ngIf="!selectedDictionary.onlyValues" class="model" (change)="updateDictionary()">
         <input matInput type="number" placeholder="Model Limit" [(ngModel)]="selectedDictionary.minDistance" min="0"
                max="1" matTooltip="Number between 0 and 1 - only probability above this value are evaluated">
       </mat-form-field>
+      <mat-checkbox [(ngModel)]="selectedDictionary.textSearch" class="no-model model" (change)="updateDictionary()"
+                    matTooltip="If selected, all the values that contains the searched text are returned">Full Text
+      </mat-checkbox>
       <div class="io">
         <button mat-button (click)="downloadDictionary()" matTooltip="Download Dictionary" class="export">
           <mat-icon>file_download</mat-icon>
