--- a/bot/admin/web/src/app/theme/components/header/header.component.html
+++ b/bot/admin/web/src/app/theme/components/header/header.component.html
@@ -4,7 +4,7 @@
       <nb-icon icon="menu-2-outline"></nb-icon>
     </a>
     <img style="width: 45px;" src="/assets/images/Logo_Tock_White.svg"/>
-    <div class="logo" (click)="goToHome()">Tock Bot Administration</div>
+    <div class="logo" (click)="goToHome()">Tock Studio</div>
     <i class="material-icons small">wb_sunny</i>
     <mat-slide-toggle class="choice" [checked]="isDark" (change)="switchTheme()" color="primary"></mat-slide-toggle>
     <i class="material-icons small">brightness_2</i>
