--- a/nlp/admin/web/src/app/nlp-admin-app.component.html
+++ b/nlp/admin/web/src/app/nlp-admin-app.component.html
@@ -14,55 +14,7 @@
   ~ limitations under the License.
   -->
 
-<mat-sidenav-container>
-  <mat-sidenav #sidenav mode="side" class="tock-sidenav">
-    <mat-nav-list>
-      <mat-list-item (click)="sidenav.close()">
-        <mat-icon aria-hidden="true" matListIcon svgIcon="logo"></mat-icon>
-        <h3>Tock</h3>
-      </mat-list-item>
-      <a *ngIf="state.hasRole(UserRole.admin)" mat-list-item routerLink="/applications" routerLinkActive="active-link">Applications</a>
-      <a *ngIf="state.hasRole(UserRole.nlpUser)" mat-list-item routerLink="/nlp" routerLinkActive="active-link">NLU</a>
-      <a *ngIf="state.hasRole(UserRole.nlpUser)" mat-list-item routerLink="/quality" routerLinkActive="active-link">NLU QA</a>
-    </mat-nav-list>
-  </mat-sidenav>
-
-  <mat-toolbar color="primary">
-
-    <button mat-button class="tock-menu-button" (click)="sidenav.toggle()">
-      <mat-icon>menu</mat-icon>
-    </button>
-
-    <a routerLink="/" class="tock-title">Tock NLU Administration</a>
-
-    <span class="fill-remaining-space"></span>
-
-    <mat-select *ngIf="state.currentApplication"
-               (selectionChange)="changeApplication($event.value)"
-               [ngModel]="state.currentApplication.name"
-               class="select-application">
-      <mat-option *ngFor="let app of state.applications"
-                 [value]="app.name">{{ app.name }}
-      </mat-option>
-    </mat-select>
-
-    <mat-select *ngIf="state.currentApplication"
-               (selectionChange)="changeLocale($event.value)"
-               [ngModel]="state.currentLocale"
-               class="select-locale">
-      <mat-option *ngFor="let l of state.currentApplication.supportedLocales"
-                 [value]="l">{{ state.localeName(l) }}
-      </mat-option>
-    </mat-select>
-
-    <button *ngIf="auth.isLoggedIn() && !auth.isSSO()" class="tock-icon-button" (click)="auth.logout()" matTooltip="Logout">
-      <i class="material-icons tock-toolbar-menu">exit_to_app</i>
-    </button>
-
-  </mat-toolbar>
-
-  <div class="main">
-    <router-outlet></router-outlet>
-  </div>
-
-</mat-sidenav-container>
+<ngx-one-column-layout>
+  <nb-menu [items]="menu"></nb-menu>
+  <router-outlet></router-outlet>
+</ngx-one-column-layout>
