#568 fixes admin display perf & improves table display
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/flow/flow.component.html
+++ b/bot/admin/web/src/app/bot/flow/flow.component.html
@@ -47,7 +47,7 @@
       </span>
       <br/>
       <span class="select">
-        <nb-select [(ngModel)]="selectedLayout" (selectedChange)="changeLayout($event.value)"
+        <nb-select [(ngModel)]="selectedLayout" (selectedChange)="changeLayout()"
         placeholder="Layout" status="primary" style="width: 10rem;">
           <nb-option *ngFor="let l of layouts" [value]="l.name">{{l.name}}</nb-option>
         </nb-select>
