--- a/nlp/admin/web/src/app/sentence-analysis/create-entity-dialog/create-entity-dialog.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/create-entity-dialog/create-entity-dialog.component.html
@@ -35,7 +35,7 @@
     Or create :
 
     <mat-form-field>
-      <input matInput placeholder="Entity Type" [(ngModel)]="type" (keyup)="onTypeKeyUp($event)">
+      <input cdkFocusInitial matInput placeholder="Entity Type" [(ngModel)]="type" (keyup)="onTypeKeyUp($event)">
     </mat-form-field>
   </p>
 
