--- a/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.html
@@ -79,11 +79,11 @@
       </mat-chip>
     </mat-chip-list>
     <div>
-      <button mat-button (click)="addEntity()">
+      <button nbButton ghost (click)="addEntity()">
         <mat-icon>add</mat-icon>
         Add New Entity
       </button>
-      <button mat-raised-button (click)="onClose()">
+      <button nbButton ghost (click)="onClose()">
         <mat-icon>close</mat-icon>
         Close Entity Selection
       </button>
