--- a/nlp/admin/web/src/app/try/try.component.html
+++ b/nlp/admin/web/src/app/try/try.component.html
@@ -40,5 +40,6 @@
 <tock-sentence-analysis *ngIf="sentence"
                         [(sentence)]="sentence"
                         (closed)="onClose()"
-                        [displayProbabilities]="true"></tock-sentence-analysis>
+                        [displayProbabilities]="true"
+                        [minimalView]="false"></tock-sentence-analysis>
 
