--- a/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.css
+++ b/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.css
@@ -15,6 +15,7 @@
  */
 
 .highlight {
+  padding-top: 5px;
   text-align: center;
 }
 
@@ -24,7 +25,6 @@
 }
 
 .highlight-text {
-  font-size: x-large;
 }
 
 .tokens {
