--- a/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.css
+++ b/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.css
@@ -81,10 +81,19 @@
   text-align: left;
 }
 
-.validate{
+.validate {
   margin-left: 20px;
+}
+
+.minimal {
+   float:right;
 }
 
 .btn {
   margin: 0 8px;
+}
+
+.intent-select {
+  margin-right: 10px;
+  width: 12rem;
 }
