--- a/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.html
@@ -15,26 +15,37 @@
   -->
 
 <nb-card class="sentence-analysis">
-  <nb-card-header style="font-size: medium;font-weight: normal;">
+  <nb-card-header style="font-size: medium;font-weight: normal;" (click)="displayAllView()">
     <tock-highlight *ngIf="displayEntities" [sentence]="sentence"></tock-highlight>
   </nb-card-header>
-  <nb-card-body>
-    <div class="sentence-analysis-content">
-      <nb-select placeholder="Intent" size="small" status="primary"
+  <nb-card-body (click)="displayAllView()">
+    <div *ngIf="minimalView" class="minimal">
+      <span style="cursor:pointer" title="Modify the Intent" (click)="focusOnIntentSelect();$event.stopPropagation();">{{sentence.getIntentLabel(this.state)}}</span>
+      <button nbButton outline status="primary" size="small" shape="semi-round" class="btn" (click)="displayAllView();$event.stopPropagation();">Details
+      </button>
+      <button nbButton status="primary" size="small" shape="semi-round" class="btn" (click)="onValidate();$event.stopPropagation();">Validate
+      </button>
+    </div>
+    <div *ngIf="!minimalView" class="sentence-analysis-content">
+      <nb-select
+                 placeholder="Intent"
+                 size="small"
+                 status="primary"
                  [(ngModel)]="sentence.classification.intentId"
-                 (selectedChange)="onIntentChange($event.value)"
-                 style="margin-right: 10px; width: 12rem;">
+                 (selectedChange)="onIntentChange()"
+                 class="intent-select">
         <nb-option-group *ngFor="let category of state.currentIntentsCategories | async" [title]="category.category">
           <nb-option *ngFor="let intent of category.intents" [value]="intent._id">
             {{intent.intentLabel()}}
           </nb-option>
         </nb-option-group>
         <nb-option value="tock:unknown">Unknown</nb-option>
-        <nb-option value="newIntent">Create New Intent</nb-option>
       </nb-select>
-      <button mat-icon-button (click)="newIntent()" matTooltip="Create New Intent"><mat-icon>library_add</mat-icon></button>
+      <button nbButton ghost (click)="newIntent()" matTooltip="Create New Intent" size="small">
+        <mat-icon>library_add</mat-icon>
+      </button>
       <nb-select status="primary" placeholder="Language" [(ngModel)]="sentence.language" size="small"
-                 (selectedChange)="onLanguageChange($event.value)">
+                 (selectedChange)="onLanguageChange()">
         <nb-option *ngFor="let l of state.currentApplication.supportedLocales" [value]="l">
           {{state.localeName(l)}}
         </nb-option>
@@ -94,14 +105,14 @@
                           [displayProbabilities]="displayProbabilities"
                           (containerChange)="onSentenceChange()"></tock-edit-entities>
     </div>
-    <mat-card *ngIf="sentence.forReview && sentence.reviewComment">
+    <mat-card *ngIf="!minimalView && sentence.forReview && sentence.reviewComment">
       <mat-card-subtitle>Comment</mat-card-subtitle>
       <mat-card-content class="reviewComment">
         {{sentence.reviewComment}}
       </mat-card-content>
     </mat-card>
   </nb-card-body>
-  <nb-card-footer class="sentence-analysis-content">
+  <nb-card-footer *ngIf="!minimalView" class="sentence-analysis-content">
     <button nbButton status="danger" size="small" shape="semi-round" class="btn" (click)="onDelete()">Delete</button>
     <button nbButton status="warning" size="small" shape="semi-round" class="btn" (click)="onUnknown()"
             *ngIf="displayUnknownButton"
@@ -110,7 +121,11 @@
     </button>
     <button nbButton status="primary" size="small" shape="semi-round" class="btn" (click)="onValidate()">Validate
     </button>
-    <button nbButton outline status="primary" size="small" shape="semi-round" class="btn" (click)="onReviewRequest()">Ask for Review
+    <button nbButton outline status="primary" size="small" shape="semi-round" class="btn" (click)="onReviewRequest()">
+      Ask for Review
+    </button>
+    <button *ngIf="displayClose" nbButton outline status="primary" size="small" shape="semi-round" class="btn" (click)="closed.emit(null)">
+      <mat-icon>keyboard_return</mat-icon>
     </button>
     <a mat-button
        [routerLink]="[config.displayDialogUrl]"
@@ -121,6 +136,7 @@
     >Conversations
     </a>
     <div *ngIf="sentence.qualifier" class="lastUpdate" matTooltip="Qualifier">{{sentence.qualifier}}</div>
-    <div *ngIf="sentence.updateDate" class="lastUpdate" matTooltip="Last update">{{sentence.updateDate | amLocal | amDateFormat: 'HH:mm:ss YYYY/MM/DD'}}</div>
+    <div *ngIf="sentence.updateDate" class="lastUpdate"
+         matTooltip="Last update">{{sentence.updateDate | amLocal | amDateFormat: 'HH:mm:ss YYYY/MM/DD'}}</div>
   </nb-card-footer>
 </nb-card>
