--- a/bot/admin/web/src/app/bot/feature/feature.component.html
+++ b/bot/admin/web/src/app/bot/feature/feature.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<nb-card>
+<nb-card class="features">
   <nb-card-header  style="display: flex;">
     Features
     <nb-actions size="small" style="cursor: pointer;">
