--- a/bot/admin/web/src/app/bot/flow/flow.component.html
+++ b/bot/admin/web/src/app/bot/flow/flow.component.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<nb-accordion>
+<nb-accordion class="flow">
   <nb-accordion-item>
     <nb-accordion-item-header>
         Bot Flow    -    Layout options
