--- a/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
+++ b/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
@@ -13,7 +13,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<nb-card>
+<nb-card class="dialog">
   <nb-card-header>
     Test the application <i>{{state.currentApplication.name}}</i>
   </nb-card-header>
