--- a/nlp/admin/web/src/app/applications/applications/applications.component.html
+++ b/nlp/admin/web/src/app/applications/applications/applications.component.html
@@ -58,7 +58,7 @@
         <nb-action class="control-item"
                    (click)="downloadDump(app)"
                    nbTooltip="Download an application dump">
-          <i class="material-icons tock-toolbar-menu" style="font-size: 30px;">cloud_download</i>
+          <i class="material-icons tock-toolbar-menu" style="font-size: 30px;">get_app</i>
         </nb-action>
         <nb-action class="control-item"
                    (click)="downloadSentencesDump(app)"
