--- a/bot/admin/web/src/app/bot/feature/feature.component.css
+++ b/bot/admin/web/src/app/bot/feature/feature.component.css
@@ -14,6 +14,10 @@
  * limitations under the License.
  */
 
+.features {
+  margin-top: 20px;
+}
+
 .feature {
   width: 100%;
   display: block;
@@ -21,18 +25,18 @@
   margin-bottom: 20px;
   padding: 0 20px;
 
-  font-family: Roboto,"Helvetica Neue",sans-serif;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 .name {
   float: left;
-  width:150px;
+  width: 150px;
   line-height: 36px;
 }
 
 .category {
   float: left;
-  width:400px;
+  width: 400px;
   font-size: medium;
   line-height: 36px;
 }
