--- a/bot/admin/web/src/app/test/plan/test-plan.component.html
+++ b/bot/admin/web/src/app/test/plan/test-plan.component.html
@@ -14,11 +14,11 @@
   ~ limitations under the License.
   -->
 
-<nb-card *ngIf="(botConfiguration.restConfigurations|async).length ===0">
-  <h3>No bot configuration detected.</h3>
+<nb-card *ngIf="(botConfiguration.restConfigurations|async).length ===0" class="plans">
+  No bot configuration detected
 </nb-card>
 
-<nb-card *ngIf="xray">
+<nb-card *ngIf="xray" class="plans">
   <nb-card-header>Execute XRay plan</nb-card-header>
   <nb-card-body>
     <tock-select-bot [(configurationId)]="xrayBotConfigurationId"
@@ -39,7 +39,7 @@
   </nb-card-body>
 </nb-card>
 
-<nb-card *ngIf="(botConfiguration.restConfigurations|async).length !==0">
+<nb-card *ngIf="(botConfiguration.restConfigurations|async).length !==0" class="plans">
   <nb-card-header style="display: flex;">Test Plans
     <nb-actions size="small" style="cursor: pointer;">
       <nb-action class="control-item" (click)="prepareCreateTestPlan()"
